# gonka-poc

./: .gitignore  MIGRATION_FROM_FORK.md  README.md  pyproject.toml
.github/workflows/: README.md  contract-tests.yml  grep-lint.yml
docs/: pseudo-input-ids-convention.md
docs/adr/: ADR-0013-poc-gate-ordering.md  ADR-0014-plugin-vs-fork.md  ADR-0015-poc-validation-kv-borrowing.md
src/gonka_poc/: __init__.py  plugin.py
src/gonka_poc/_compat/: __init__.py  v0_23.py  v0_25.py
src/gonka_poc/entrypoint/: __init__.py  api_router.py  gating.py
src/gonka_poc/models/: __init__.py  qwen3_moe_config.py
src/gonka_poc/poc/: __init__.py  callbacks.py  config.py  data.py  generate_queue.py  gpu_random.py  layer_hooks.py  poc_model_runner.py  reservation.py  routes.py
src/gonka_poc/worker/: __init__.py  extension.py
tests/contract/: test_v0_23_api_surface.py  test_v0_25_api_surface.py
tests/gonka/: README.md  live_conftest.py  test_grammar_graceful_degradation.py  test_live_grammar_degradation.py  test_live_logprobs_mode.py  test_live_poc.py  test_live_validation.py
tests/unit/: test_borrowed_layout.py  test_compat_dispatch_smoke.py  test_exception_paths.py  test_gating.py  test_init_generate_exception_path.py  test_reservation.py  test_v4_metadata_layout.py  test_workspace_unlock.py
tools/: grep_lint.py
